Data transfer as list (needs solution) - Coded Buttons- Icon added

--- a/Scraper_app/main.ui
+++ b/Scraper_app/main.ui
@@ -173,7 +173,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Export to</string>
+    <string>Save to</string>
    </property>
   </widget>
  </widget>
