--- a/Scraper_app/main.ui
+++ b/Scraper_app/main.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>599</width>
+    <width>663</width>
     <height>398</height>
    </rect>
   </property>
@@ -21,15 +21,15 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>10</y>
-     <width>101</width>
-     <height>31</height>
+     <x>60</x>
+     <y>20</y>
+     <width>81</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>14</pointsize>
+     <pointsize>12</pointsize>
     </font>
    </property>
    <property name="text">
@@ -45,6 +45,11 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>Add field</string>
    </property>
@@ -57,6 +62,11 @@
      <width>121</width>
      <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Start</string>
@@ -101,6 +111,11 @@
      <height>31</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>Output File:</string>
    </property>
@@ -109,9 +124,9 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>10</y>
+     <y>20</y>
      <width>401</width>
-     <height>31</height>
+     <height>25</height>
     </rect>
    </property>
    <property name="font">
@@ -143,7 +158,7 @@
     <rect>
      <x>30</x>
      <y>90</y>
-     <width>541</width>
+     <width>611</width>
      <height>221</height>
     </rect>
    </property>
@@ -157,9 +172,9 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>50</y>
+     <y>60</y>
      <width>121</width>
-     <height>31</height>
+     <height>25</height>
     </rect>
    </property>
    <property name="font">
@@ -175,9 +190,9 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>50</y>
+     <y>60</y>
      <width>121</width>
-     <height>31</height>
+     <height>25</height>
     </rect>
    </property>
    <property name="font">
@@ -193,9 +208,9 @@
    <property name="geometry">
     <rect>
      <x>430</x>
-     <y>50</y>
+     <y>60</y>
      <width>121</width>
-     <height>31</height>
+     <height>25</height>
     </rect>
    </property>
    <property name="font">
@@ -210,11 +225,16 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>50</y>
-     <width>101</width>
-     <height>31</height>
+     <x>60</x>
+     <y>60</y>
+     <width>81</width>
+     <height>21</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Parent Tag:</string>
