--- a/Scraper_app/main.ui
+++ b/Scraper_app/main.ui
@@ -12,7 +12,7 @@
   </property>
   <property name="font">
    <font>
-    <pointsize>14</pointsize>
+    <pointsize>12</pointsize>
    </font>
   </property>
   <property name="windowTitle">
@@ -238,6 +238,19 @@
    </property>
    <property name="text">
     <string>Parent Tag:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_4">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>340</y>
+     <width>75</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Dummy</string>
    </property>
   </widget>
  </widget>
