--- a/Scraper_app/main.ui
+++ b/Scraper_app/main.ui
@@ -57,8 +57,8 @@
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>430</x>
-     <y>370</y>
+     <x>440</x>
+     <y>360</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -75,10 +75,10 @@
   <widget class="QComboBox" name="comboBox">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>20</x>
      <y>380</y>
      <width>71</width>
-     <height>31</height>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
@@ -88,26 +88,26 @@
    </property>
    <item>
     <property name="text">
-     <string>CSV</string>
+     <string>csv</string>
     </property>
    </item>
    <item>
     <property name="text">
-     <string>JSON</string>
+     <string>json</string>
     </property>
    </item>
    <item>
     <property name="text">
-     <string>JSONL</string>
+     <string>jsonl</string>
     </property>
    </item>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>60</x>
      <y>340</y>
-     <width>101</width>
+     <width>81</width>
      <height>31</height>
     </rect>
    </property>
@@ -138,10 +138,10 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>110</x>
      <y>380</y>
      <width>91</width>
-     <height>31</height>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
